--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
   },
   "homepage": "https://github.com/leshden/test-react-webpack#readme",
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.5",
-    "babel-preset-env": "^1.7.0",
+    "@babel/preset-react": "^7.17.12",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^5.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.0",
+    "@babel/preset-env": "^7.18.0",
+    "babel-loader": "^8.2.5",
+    "webpack": "^5.72.1"
   }
 }
